* allow single Layer object as argument in LayerModel
* rewrite of line cut functions, shorter code, faster execution, more
  versatile
* avoid loops in Experiment.Q2Ang functions
* clean README and add new CONTRIBUTIONS instructions

v1.5.0, 2018-07-04

* improved docstring formating
* simulation code for diffuse X-ray reflectivity
* more flexibility in defining materials Wyckoff positions
* convenience function to calculate diffracted intensities of thin films to
  compare various Bragg peaks (coplanar diffraction geoemetry)
* simplify WyckoffBase of Alloy, by avoiding double entries
* CIF parser now is able to fully parse files without symmetry operations
* CIF parser now distinguishes multiple "_data" entries
* improvement of the scanning XRD dataset parsers for ID01 (FastScan)
* PEP8 improvements
* speed optimization in EDF parser
* add getheader_element to SPECScan
* try to parse oxidation state of elements from a CIF file, and ignore '.' and
  '?' values for Debye-Waller factors and occupation
* numpy 1.14 related fixes (mostly in file parsers)
* fix bugs in spacegroups whos Wyckoff position contains a multiplication
* make U/UB matrix compatible with the definition in SPEC
* remove deprecated Lattice/LatticeBase code
* update XRR example

v1.4.2, 2017-11-28 "The Praha edition"

* introduce convenience function HKL to convert q-vectors to HKL of materials
* update outdated information and fix typos in README
* introduce abstract classes where useful
* code cleanup (import statements)
* vastly improved CIF file support with recognition of correct space group and
  Wyckoff position
* use AppVeyor.com for Windows testing and binary creation
* make wavelength handling in PowderDiffraction more flexible
* fix bug in SiGe alloy class
* python2 fix for EDFFile which could have failed as described in issue #41
* fix clear_bit utility function
* fix float/int conversion in line cut functions for newer numpy

v1.4.1, 2017-04-03

* new materials (Cr, tetragonal BaTiO3)